# Adaptive-Public-Transport-Control

./: .gitattributes  .gitignore  00_fetch_prague_stops.py  01_prepare_data.py  02_build_bbn_pgmpy.py  03_enrich_stops.py  04_run_experiment.py  05_generate_tables.py  CITATION.cff  LICENSE  README.md  config.py  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt  run_all.py
augmentation/: __init__.py  compare_augmentation.py  requirements-gan.txt
data/: README.md
decision/: __init__.py  decision_engine.py
tests/: conftest.py  test_astar.py  test_decision_engine.py  test_prepare_data.py  test_transit_package.py
transit/: __init__.py  bbn.py  cli.py  config.py  decision.py  routing.py
transit/app/: README.md  __init__.py  dashboard.py
